--- a/public/static/styles/login.css
+++ b/public/static/styles/login.css
@@ -16,6 +16,7 @@ body {
   background-color: #fff;
   min-height: 100vh;
   overflow: hidden;
+  background-color: #050505;
 }
 
 .forms-container {
@@ -61,7 +62,6 @@ form.sign-in-form {
 
 .title {
   font-size: 2.2rem;
-  color: #444;
   margin-bottom: 10px;
 }
 
