--- a/public/static/styles/main.css
+++ b/public/static/styles/main.css
@@ -76,3 +76,23 @@ textarea,
 input {
   color: #fff !important;
 }
+
+/* USER OPTIONS BOX IMAGES CONTAINER */
+
+.user_images {
+  height: calc((100vh) - 215px);
+  overflow-y: auto;
+}
+
+.user_images::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+.user_images::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 4px;
+}
+.user_images::-webkit-scrollbar-track {
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 4px;
+}
